--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
     "@web3auth/auth-adapter": "^9.3.0",
-    "@web3auth/base": "^9.3.0",
-    "@web3auth/ethereum-provider": "^9.3.0",
-    "@web3auth/no-modal": "^9.3.0",
+    "@web3auth/base": "^8.12.4",
+    "@web3auth/ethereum-provider": "^8.12.4",
+    "@web3auth/no-modal": "^8.12.4",
     "bufferutil": "^4.0.8",
     "ethers": "^6.13.2",
-    "next": "13.4.9",
+    "next": "^15.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "utf-8-validate": "^6.0.3",
@@ -29,6 +29,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
     "empty-module": "^0.0.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
