--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3auth/base": "^8.12.4",
     "@web3auth/ethereum-provider": "^8.12.4",
     "@web3auth/no-modal": "^8.12.4",
+    "@web3auth/openlogin-adapter": "^8.12.4",
     "bufferutil": "^4.0.8",
     "ethers": "^6.13.2",
     "next": "^15.0.1",
@@ -30,8 +31,9 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "empty-module": "^0.0.2",
-    "eslint": "8.44.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "13.4.9",
     "typescript": "5.1.6"
   }
